src/GrpcWebApp/envoy.yaml
static_resources:
  listeners:
  - address:
      socket_address:
        address: 0.0.0.0
        port_value: 8081
    filter_chains:
    - filters:
      - name: envoy.filters.network.http_connection_manager
        typed_config:
          "@type": type.googleapis.com/envoy.config.filter.network.http_connection_manager.v2.HttpConnectionManager
          codec_type: auto
          add_user_agent: true
          access_log:
          - name: envoy.access_loggers.file
            typed_config:
              "@type": type.googleapis.com/envoy.config.accesslog.v2.FileAccessLog
              path: "/dev/stdout"
          stat_prefix: egress_http
          common_http_protocol_options:
            idle_timeout: 0.840s
          use_remote_address: true
          route_config:
            name: local_route
            virtual_hosts:
            - name: backend
              domains:
              - grpc
              cors:
                allow_origin_string_match:
                - prefix: "*"
                allow_credentials: true
                allow_methods: GET, PUT, DELETE, POST, PATCH, OPTIONS
                allow_headers: content-type,origin,authorization,accept,keep-alive,user-agent,cache-control,content-type,content-transfer-encoding,x-accept-content-transfer-encoding,x-accept-response-streaming,x-user-agent,x-grpc-web
                expose_headers: grpc-status,grpc-message,x-envoy-upstream-service-time
              routes:
              - match:
                  prefix: "/"
                route:
                  cluster: backend-proxy
          http_filters:
          - name: envoy.cors
            typed_config: {}
          - name: envoy.filters.http.grpc_http1_bridge
            typed_config: {}
          - name: envoy.filters.http.router
            typed_config: {}
        
  clusters:
  - name: backend-proxy
    type: logical_dns
    dns_lookup_family: V4_ONLY
    lb_policy: round_robin
    connect_timeout: 0.250s
    http_protocol_options: {}
    load_assignment:
      cluster_name: backend-proxy
      endpoints:
      - lb_endpoints:
        - endpoint:
            address:
              socket_address:
                address: 0.0.0.0
                port_value: 9091

admin:
  access_log_path: "/tmp/admin_access.log"
  address:
    socket_address:
      address: 0.0.0.0
      port_value: 9902
